--- a/amazTemp-main/package.json
+++ b/amazTemp-main/package.json
@@ -12,16 +12,19 @@
     "type": "git",
     "url": ""
   },
-  
   "homepage": "https://github.com/marcmll/next-snake",
   "dependencies": {
-    
     "bootstrap": "^5.2.0",
+    "date-fns": "^2.29.2",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "reactstrap": "^9.1.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "sass": "^1.45.2"
   },
   "devDependencies": {
